--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,12 @@ h6 {
   justify-content: space-between;
 }
 
+.profile-list img {
+  display: block;
+
+  max-width: 100%;
+}
+
 /* Staff */
 .section.staff {
   background-color: var(--secondary-bg-color);
@@ -259,8 +265,7 @@ h6 {
 }
 
 .staff-list .item {
-  color: var(--primary-bg-color);
-
+  background-color: var(--primary-bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -270,7 +275,6 @@ h6 {
   display: block;
 
   max-width: 100%;
-  max-height: auto;
 }
 .staff-list .name {
   color: var(--title-text-color);
@@ -343,7 +347,10 @@ h6 {
 }
 .filter {
   display: flex;
+
   justify-content: center;
+
+  margin-bottom: 50px;
 }
 
 .filter .item:not(:last-child) {
@@ -356,7 +363,6 @@ h6 {
   min-width: 73px;
 
   padding: 6px 22px;
-  margin-bottom: 50px;
   cursor: pointer;
   border: transparent;
   border-radius: 4px;
