--- a/css/styles.css
+++ b/css/styles.css
@@ -50,11 +50,23 @@ h6 {
   padding: 0px;
 }
 
+.hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+  }
+
 .container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  /* outline: 2px solid tomato; */
 }
 
 /* Header */
@@ -220,9 +232,6 @@ h6 {
 .specialities .container {
   padding-top: 94px;
 }
-.section-title.hidden {
-  display: none;
-}
 
 .feature-list {
   display: flex;
@@ -365,9 +374,52 @@ h6 {
   margin-right: 10px;
 }
 
+/* Clients */
+.clients .container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.clients-list {
+  display: flex;
+}
+
+.clients-list .client {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.clients-list .client:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients-list .link {
+  fill: var(--primary-icon-color);
+}
+
+.clients-list .icon {
+  width: 170px;
+  height: 92px;
+  padding: 16px 32px;
+
+  border: 1px solid var(--primary-icon-color);
+  border-radius: 4px;
+}
+
+.clients-list .icon:hover {
+  fill: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
 /* Footer */
 .footer {
   background-color: var(--footer-bg-color);
+}
+
+.footer .container {
+  display: flex;
+  align-items: baseline;
 
   padding-top: 60px;
   padding-bottom: 60px;
@@ -412,9 +464,46 @@ h6 {
   color: var(--accent-color);
 }
 
-.footer-social .links {
-  display: inline-flex;
-  outline: 2px solid tomato;
+.socials {
+  margin-left: 70px;
+}
+
+.socials .text {
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  color: var(--primary-bg-color);
+}
+.footer .socials-list {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 206px;
+  height: 44px;
+}
+
+.socials-list .link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  fill: var(--primary-bg-color);
+}
+
+.socials-list .link:hover {
+  background-color: var(--accent-color);
+}
+
+.socials-list .item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.socials-list .icon {
+  width: 20px;
+  height: 20px;
 }
 
 /* PORTFOLIO.HTML */
@@ -470,6 +559,12 @@ h6 {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+}
+
+.portfolio-examples .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+  0px 4px 4px rgba(0, 0, 0, 0.06),
+  1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-examples .item:nth-child(3n) {
