--- a/css/styles.css
+++ b/css/styles.css
@@ -151,8 +151,6 @@ h6 {
 }
 
 .auth-nav .icon {
-  width: 16px;
-  height: 12px;
   margin-right: 6px;
   fill: currentColor;
 }
@@ -372,6 +370,11 @@ h6 {
   fill: var(--primary-bg-color);
 }
 
+.staff-social .icon {
+  width: 20px;
+  height: 20px;
+}
+
 .staff-social .item-icon:not(:last-child) {
   margin-right: 10px;
 }
@@ -411,7 +414,8 @@ h6 {
 }
 
 .clients-list .icon {
-  flex-grow: 1;
+  width: 106px;
+  height: 60px;
 }
 
 /* Footer */
