--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,6 @@ h6 {
 
 /* Hero */
 .hero {
-  min-width: 100%;
   max-width: 1600px;
   height: 600px;
   margin-left: auto;
@@ -179,8 +178,8 @@ h6 {
   background-color: var(--hero-bg-color);
   background-image: linear-gradient(
       to right,
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.4)
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
     ),
     url(../images/banner.jpg);
   background-size: contain;
@@ -293,6 +292,7 @@ h6 {
   display: block;
 
   max-width: 100%;
+  height: auto;
 }
 
 /* Staff */
@@ -324,11 +324,18 @@ h6 {
   display: block;
 
   max-width: 100%;
+  height: auto;
+}
+
+.staff-list .item-card {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 32px;
+  padding-right: 32px;
 }
 .staff-list .name {
   color: var(--title-text-color);
 
-  margin-top: 30px;
   margin-bottom: 10px;
 
   font-weight: 500;
@@ -340,6 +347,8 @@ h6 {
   color: var(--primary-text-color);
 
   margin-bottom: 16px;
+
+  font-size: 16px;
 }
 
 .staff-social {
@@ -347,7 +356,6 @@ h6 {
   align-items: center;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 30px;
   width: 206px;
   height: 44px;
 }
@@ -420,15 +428,15 @@ h6 {
 
 /* Footer */
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   background-color: var(--footer-bg-color);
 }
 
 .footer .container {
   display: flex;
   align-items: baseline;
-
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 .footer .logo {
@@ -476,6 +484,9 @@ h6 {
 
 .socials .text {
   margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
   text-transform: uppercase;
   color: var(--primary-bg-color);
 }
@@ -568,12 +579,6 @@ h6 {
   margin-bottom: 30px;
 }
 
-.portfolio-examples .item:hover,
-.portfolio-examples .item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .portfolio-examples .item:nth-child(3n) {
   margin-right: 0px;
 }
@@ -581,6 +586,22 @@ h6 {
 .portfolio-examples .item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
+
+.portfolio-examples img {
+  display: block;
+
+  max-width: 100%;
+  height: auto;
+}
+.portfolio-examples .link {
+  display: block;
+}
+
+.portfolio-examples .link:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-examples .description {
   padding-left: 24px;
   padding-right: 24px;
