--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ h6 {
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/banner.jpg);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   color: var(--primary-bg-color);
